# internal/infra/boundaries/http/swagger/swagger.yaml
@@ -1,5 +1,13 @@
 basePath: /
 definitions:
+  http.CreateRoomRequest:
+    properties:
+      deckId:
+        enum:
+        - fibonacci
+        - tshirt
+        type: string
+    type: object
   http.CreateRoomResponse:
     properties:
       roomId:
@@ -300,13 +308,23 @@ paths:
       consumes:
       - application/json
       description: Creates a new planning poker room and returns its ID
+      parameters:
+      - description: Room creation options
+        in: body
+        name: request
+        schema:
+          $ref: '#/definitions/http.CreateRoomRequest'
       produces:
       - application/json
       responses:
-        "200":
-          description: OK
+        "201":
+          description: Created
           schema:
             $ref: '#/definitions/http.CreateRoomResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/http.ErrorResponse'
         "500":
           description: Internal Server Error
           schema:
